--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Where\'s Aldo?</string>
-    <string name="mode_one">Mode 1</string>
-    <string name="mode_two">Mode 2</string>
+    <string name="classic">Classic</string>
+    <string name="mode_one">Chronomod</string>
+    <string name="mode_two">Chronomod 2</string>
     <string name="hall_of_fame">Hall of fame</string>
 </resources>
