--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="mode_one">Chronomod</string>
     <string name="mode_two">Chronomod 2</string>
     <string name="hall_of_fame">Hall of fame</string>
+    <string name="back">Back to menu</string>
 </resources>
